# CppBoardGames

./: CMakeLists.txt  Case.cpp  Case.h  Pion.cpp  Pion.h  Plateau.cpp  Plateau.h  PlateauAnglais.cpp  PlateauAnglais.h  PlateauCombinatoireAbstrait.cpp  PlateauCombinatoireAbstrait.h  PlateauDamier.cpp  PlateauDamier.h  PlateauDamierAnglais.cpp  PlateauDamierAnglais.h  PlateauDamierInternational.cpp  PlateauDamierInternational.h  PlateauEchiquier.cpp  PlateauEchiquier.h  PlateauStratego.cpp  PlateauStratego.h  diagramme.puml  main.cpp
dame_anglaise/: test1.txt
dame_international/: test1.txt
joueur/: joueur1.txt  joueur2.txt  joueur3.txt  joueur4.txt  joueur5.txt  joueur6.txt
ordi/: ordi1.txt  ordi2.txt  ordi3.txt  ordi4.txt  ordi5.txt  ordi6.txt
stratego/: test1.txt
